Library/analytics-worker-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-worker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: analytics-worker
  template:
    metadata:
      labels:
        app: analytics-worker
    spec:
      containers:
        - name: analytics-worker
          image: analytics-worker:k8s
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: analytics-worker-service
spec:
  selector:
    app: analytics-worker
  ports:
    - port: 80
      targetPort: 8080
