Library/book-service-service.yml
apiVersion: v1
kind: Service
metadata:
  name: book-service-service
spec:
  type: NodePort
  selector:
    app: book-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30080
