Library/order-worker-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-worker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order-worker
  template:
    metadata:
      labels:
        app: order-worker
    spec:
      containers:
        - name: order-worker
          image: order-worker:k8s
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: order-worker-service
spec:
  selector:
    app: order-worker
  ports:
    - port: 80
      targetPort: 8080
